--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -33,7 +33,7 @@ jobs:
           distribution: 'adopt'
       - name: Build Project and Export Coverage
         env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_API_KEY }}
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
           export CI_BRANCH="${GITHUB_REF#refs/heads/}"
           sbt clean coverage test coverageReport coveralls
