--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main, developing]
   pull_request:
-    branches: [main]
+    branches: [main, developing]
 
 jobs:
   build:
