--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,38 +2,59 @@ name: Scala CI
 
 on:
   push:
-    branches: [main, developing]
+    branches: [ main, developing ]
   pull_request:
-    branches: [main, developing]
+    branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Compile
-        run: sbt compile
-      - name: Run tests
-        run: sbt test
+  test:
 
-  run_tests:
     runs-on: ubuntu-latest
-    needs: build
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - name: Build Project and Export Coverage
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        run: |
-          export CI_BRANCH="${GITHUB_REF#refs/heads/}"
-          sbt clean coverage test coverageReport coveralls
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '11'
+
+    - name: Cache Ivy2
+      uses: actions/cache@v2
+      with:
+        path: ~/.ivy2/cache
+        key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt') }}
+        restore-keys: ${{ runner.os }}-sbt
+
+    - name: Cache SBT
+      uses: actions/cache@v2
+      with:
+        path: ~/.sbt
+        key: ${{ runner.os }}-sbt-cache
+        restore-keys: ${{ runner.os }}-sbt-cache
+
+    - name: Cache Coursier
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/coursier
+        key: ${{ runner.os }}-coursier-${{ hashFiles('**/build.sbt') }}
+        restore-keys: ${{ runner.os }}-coursier
+
+    - name: Setup Scala (add this if you use a specific version of Scala)
+      run: |
+        echo "Downloading and setting up the Scala binary"
+        curl -L -o scala-2.13.8.tgz https://downloads.lightbend.com/scala/2.13.8/scala-2.13.8.tgz
+        tar -xvf scala-2.13.8.tgz
+        sudo mv scala-2.13.8 /usr/share/
+        echo "export PATH=$PATH:/usr/share/scala-2.13.8/bin" >> $GITHUB_ENV
+      shell: bash
+
+    - name: Run tests
+      run: sbt test
+
+    - name: Run coverage
+      run: sbt coverage test coverageReport coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
