--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,18 @@
 sonar.projectKey=muellerdom_Rooobert
 sonar.organization=muellerdom
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Rooobert
-#sonar.projectVersion=1.0
+# Name und Version des Projekts für die Anzeige in SonarCloud
+sonar.projectName=Rooobert
+sonar.projectVersion=1.0
 
+# Pfad zu den Quellcodes relativ zur sonar-project.properties
+sonar.sources=src
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Optional: Tests einbeziehen
+# sonar.tests=src/test
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# Optional: Coverage-Berichte hinzufügen (falls vorhanden)
+# sonar.coverageReportPaths=target/coverage-reports/coverage.xml
+
+# Encoding der Quelldateien
+sonar.sourceEncoding=UTF-8
