--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -22,21 +22,21 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.ivy2/cache
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt') }}
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt', '**/*.scala') }}
           restore-keys: ${{ runner.os }}-sbt
 
       - name: Cache SBT
         uses: actions/cache@v3
         with:
           path: ~/.sbt
-          key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/build.sbt') }}
+          key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/*.sbt', '**/*.scala') }}
           restore-keys: ${{ runner.os }}-sbt-cache
 
       - name: Cache Coursier
         uses: actions/cache@v3
         with:
           path: ~/.cache/coursier
-          key: ${{ runner.os }}-coursier-${{ hashFiles('**/build.sbt') }}
+          key: ${{ runner.os }}-coursier-${{ hashFiles('**/*.sbt', '**/*.scala') }}
           restore-keys: ${{ runner.os }}-coursier
 
       - name: Compile
@@ -58,21 +58,21 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.ivy2/cache
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt') }}
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt', '**/*.scala') }}
           restore-keys: ${{ runner.os }}-sbt
 
       - name: Cache SBT
         uses: actions/cache@v3
         with:
           path: ~/.sbt
-          key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/build.sbt') }}
+          key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/*.sbt', '**/*.scala') }}
           restore-keys: ${{ runner.os }}-sbt-cache
 
       - name: Cache Coursier
         uses: actions/cache@v3
         with:
           path: ~/.cache/coursier
-          key: ${{ runner.os }}-coursier-${{ hashFiles('**/build.sbt') }}
+          key: ${{ runner.os }}-coursier-${{ hashFiles('**/*.sbt', '**/*.scala') }}
           restore-keys: ${{ runner.os }}-coursier
 
       - name: Build Project and Export Coverage
