--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -1,3 +1,4 @@
+
 name: Scala CI
 
 on:
@@ -22,21 +23,21 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.ivy2/cache
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt', '**/*.scala') }}
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt') }}
           restore-keys: ${{ runner.os }}-sbt
 
       - name: Cache SBT
         uses: actions/cache@v3
         with:
           path: ~/.sbt
-          key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/*.sbt', '**/*.scala') }}
+          key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/build.sbt') }}
           restore-keys: ${{ runner.os }}-sbt-cache
 
       - name: Cache Coursier
         uses: actions/cache@v3
         with:
           path: ~/.cache/coursier
-          key: ${{ runner.os }}-coursier-${{ hashFiles('**/*.sbt', '**/*.scala') }}
+          key: ${{ runner.os }}-coursier-${{ hashFiles('**/build.sbt') }}
           restore-keys: ${{ runner.os }}-coursier
 
       - name: Compile
@@ -58,21 +59,21 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.ivy2/cache
-          key: ${{ runner.os }}-sbt-${{ hashFiles('**/*.sbt', '**/*.scala') }}
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt') }}
           restore-keys: ${{ runner.os }}-sbt
 
       - name: Cache SBT
         uses: actions/cache@v3
         with:
           path: ~/.sbt
-          key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/*.sbt', '**/*.scala') }}
+          key: ${{ runner.os }}-sbt-cache-${{ hashFiles('**/build.sbt') }}
           restore-keys: ${{ runner.os }}-sbt-cache
 
       - name: Cache Coursier
         uses: actions/cache@v3
         with:
           path: ~/.cache/coursier
-          key: ${{ runner.os }}-coursier-${{ hashFiles('**/*.sbt', '**/*.scala') }}
+          key: ${{ runner.os }}-coursier-${{ hashFiles('**/build.sbt') }}
           restore-keys: ${{ runner.os }}-coursier
 
       - name: Build Project and Export Coverage
@@ -81,5 +82,3 @@ jobs:
         run: |
           export CI_BRANCH="${GITHUB_REF#refs/heads/}"
           sbt clean coverage test coverageReport coveralls
-
-  
