--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -80,4 +80,5 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
-          sbt clean coverage test coverageReport coveralls
+          export CI_BRANCH="${GITHUB_REF#refs/heads/}"
+          sbt clean coverage test coverageReport coverals
